# ble-scale

./: .env.example  CLAUDE.md  Cargo.toml  docker-compose.yml  readme.md  resp.json  telegraf.conf
deploy/: ble-scale.service
src/: config.rs  influxdb.rs  main.rs  scale.rs
