[package]
name = "ble-scale"
version = "0.2.0"
authors = ["Mikko Viitamäki <mikko.vitamaki@gmail.com>"]
edition = "2021"

[dependencies]
btleplug = "0.11"
dotenv = "0.15"
simple_logger = "4"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "1"
uuid = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
